[project]
name = "oauth-cli-kit"
version = "0.1.0"
description = "Reusable OAuth 2.0 + PKCE helpers for CLI applications"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "nanobot contributors"}]
keywords = ["oauth", "pkce", "cli", "auth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.25.0",
    "platformdirs>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oauth_cli_kit"]

[tool.hatch.build.targets.sdist]
include = [
    "oauth_cli_kit/",
    "README.md",
    "LICENSE",
]
