[project]
name = "oauth-cli-kit"
dynamic = ["version"]
description = "Reusable OAuth 2.0 + PKCE helpers for CLI applications"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "nanobot contributors"}]
keywords = ["oauth", "pkce", "cli", "auth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.25.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
# 开发/CI 使用的依赖，不影响库的运行时依赖与现有逻辑。
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oauth_cli_kit"]

[tool.hatch.build.targets.sdist]
include = [
    "oauth_cli_kit/",
    "README.md",
    "LICENSE",
]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
